--- a/src/invoicer/res/values/strings.yaml
+++ b/src/invoicer/res/values/strings.yaml
@@ -29,3 +29,4 @@ item_total: "Cena Spolu"
 item_name_mobile: "Vývoj mobilnej aplikácie - projekt %s"
 item_name_desktop: "Vývoj desktop aplikácie - projekt %s"
 item_name_ks: "Výdavky nevyhnutne vynaložené v súvislosti s poskytovanými službami - projekt %s"
+item_name_general: "Poskytovanie prográmatorských služieb"
