Add new supported type 'PROVISION'

--- a/src/invoicer/res/values/strings.yaml
+++ b/src/invoicer/res/values/strings.yaml
@@ -30,3 +30,4 @@ item_name_mobile: "Vývoj mobilnej aplikácie - projekt %s"
 item_name_desktop: "Vývoj desktop aplikácie - projekt %s"
 item_name_ks: "Výdavky nevyhnutne vynaložené v súvislosti s poskytovanými službami - projekt %s"
 item_name_general: "Poskytovanie prográmatorských služieb"
+item_name_provision: "Mimoriadna provízia v súlade s čl. IV, ods. 4 Zmluvy o poskytovaní služieb"
