Add support for invoices in English

--- a/src/invoicer/res/values/strings.yaml
+++ b/src/invoicer/res/values/strings.yaml
@@ -1,7 +1,6 @@
 document: "Faktúra"
 contractor: "DODÁVATEĽ"
 client: "ODBERATEĽ"
-header: "Faktúra %s"
 ico: "IČO: %s"
 dic: "DIČ: %s"
 icdph: "IČ DPH: %s"
@@ -31,3 +30,5 @@ item_name_desktop: "Vývoj desktop aplikácie - projekt %s"
 item_name_ks: "Výdavky nevyhnutne vynaložené v súvislosti s poskytovanými službami - projekt %s"
 item_name_general: "Poskytovanie prográmatorských služieb"
 item_name_provision: "Mimoriadna provízia v súlade s čl. IV, ods. 4 Zmluvy o poskytovaní služieb"
+unit_ks: "ks"
+unit_hod: "hod"
